# Capstone_Q4_Crypto_Ticket

./: .gitignore  Crypto-ticket_arc.mmd  Crypto-ticket_sequence.mmd  README.md  user-stories.md
BE/: .env  Cargo.toml  db_readme.txt
BE/db_dump/: postgres_2025-01-25_214601.sql
BE/src/: constants.rs  main.rs
BE/src/db/: mod.rs  schema.rs
BE/src/db/entities/: currency_type.rs  mod.rs  perfect_combinations_leaderboard.rs  player_ticket_score.rs  ticket.rs  ticket_history.rs  transaction.rs  user.rs  user_field.rs  user_field_history.rs  user_ticket_history_earnings.rs
BE/src/db/repositories/: mod.rs  repository.rs  ticket_repository.rs  user_repository.rs
BE/src/events/: butch_cleanup_event.rs  chunk_cleaned_event.rs  chunk_created_event.rs  jackpot_claim_event.rs  mod.rs  register_event.rs  ticket_initialized_event.rs  ticket_purchased_event.rs
BE/src/field/: cell.rs  diagonals.rs  direction.rs  game_field.rs  mod.rs  movement.rs
BE/src/routes/: lottery.rs  mod.rs
BE/src/services/: mod.rs  pubsub_service.rs  smart_contract_service.rs  ticket_service.rs
BE/src/tests/: integration_tests.rs
BE/src/utils/: helpers.rs  mod.rs  rng.rs
Solana/: .gitignore  help-commands
Solana/crypto-ticket/programs/crypto-ticket/: Cargo.toml
Solana/crypto-ticket/programs/crypto-ticket/src/: constants.rs  error.rs  events.rs  lib.rs
Solana/crypto-ticket/programs/crypto-ticket/src/instructions/: claim.rs  cleanup.rs  finish.rs  initialize.rs  mod.rs  ticket.rs
Solana/crypto-ticket/programs/crypto-ticket/src/state/: chunk.rs  mod.rs  player.rs  round.rs  ticket.rs
(+25 files in other folders)
