[package]
name = "tt_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
solana-sdk = "1.17.3"
solana-client = "1.17.3"
base64 = "0.22.1"
borsh = "1.5.3"
anchor-lang = "0.30.1"
