[package]
name = "crypto-ticket"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crypto_ticket"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
switchboard-on-demand = "0.1.17"
base64 = "0.22.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
